tests/snapshots/run_wpt_conformance__trtx_lesserOrEqual_float32_broadcast_0D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "lesser_or_equal.https.any.js",
    "lesserOrEqual float32 broadcast 0D to 4D",
    "trtx",
    Failed {
        msg: Some(
            "lesser_or_equal :: lesserOrEqual float32 broadcast 0D to 4D: index 5: actual=0 expected=1 tolerance=0\n  inputs: inputA: [4.840610980987549]; inputB: [-8.284008979797363, -3.219264507293701, -6.543179988861084, -0.540285050868988, -5.413843631744385, 5.583743095397949, 1.50178062915802, 6.5922441482543945, -9.92548656463623, -7.134799957275391, -4.915772914886475, -9.137166976928713, 9.40368366241455, -9.831502914428713, -2.0123181343078613, -6.597689628601074, -8.26932144165039, 8.281030654907227, 1.64528226852417, -1.4862726926803589, -4.998753547668457, -0.920993447303772, -9.434256553649902, 9.813238143920898]\n  expected output: [0, 0, 0, 0, 0, 1, 0, 1, 0, 0 ...] (len=24)\n  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=24)\n  expected output full nd:\n[0, 0, 0, 0, 0, 1, 0, 1, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])\n  actual output full nd:\n[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f32[];\n    inputB: f32[2, 2, 2, 3];\n  }\n\n  nodes {\n    [output] = lesserOrEqual(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
